# namecoin-core

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile.am  README.md  TODO  TODO.always-auxpow  configure.ac
.github/: PULL_REQUEST_TEMPLATE.md
ci/test/: 00_setup_env_i686_no_ipc.sh
cmake/module/: GenerateSetupNsi.cmake  Maintenance.cmake
contrib/devtools/: gen-bitcoin-conf.sh  gen-manpages.py
contrib/gitian-descriptors/: gitian-linux.yml  gitian-osx.yml  gitian-win.yml
contrib/guix/: INSTALL.md  README.md  guix-build  guix-codesign
contrib/macdeploy/: README.md  detached-sig-create.sh  macdeployqtplus
contrib/seeds/: README.md
depends/: Makefile  funcs.mk  toolchain.cmake.in
depends/hosts/: darwin.mk  default.mk
doc/: Doxyfile  README.md  REST-interface.md  bitcoin-conf.md  build-osx.md  build-unix.md  build-windows.md  gitian-building.md  release-notes.md  release-process.md
doc/man/: namecoin-cli.1  namecoin-qt.1  namecoin-tx.1  namecoin-util.1  namecoin-wallet.1  namecoin.1  namecoind.1
qa/pull-tester/: rpc-tests.py
qa/rpc-tests/: abandonconflict.py  always-auxpow.py  bipdersig-p2p.py  getauxblock.py  maxblocksinflight.py  mempool_packages.py  name_expiration.py  name_registration.py  name_scanning.py  name_wallet.py  p2p-acceptblock.py  p2p-compactblocks.py  rest.py  txn_clone.py  wallet.py
share/: setup.nsi.in
share/examples/: namecoin.conf
share/qt/: Info.plist.in
src/: CMakeLists.txt  Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  auxpow.cpp  auxpow.h  base58.cpp  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoin-wallet.cpp  bitcoin.cpp  bitcoind.cpp  chain.cpp  chain.h  chainparams.cpp  chainparamsbase.cpp  chainparamsseeds.h  clientversion.cpp  clientversion.h  coins.cpp  coins.h  core_io.cpp  core_io.h  core_write.cpp  dbwrapper.cpp  dbwrapper.h  deploymentinfo.cpp  headerssync.cpp  headerssync.h  init.cpp  key.cpp  key.h  key_io.cpp  logging.cpp  logging.h  main.cpp  main.h  miner.cpp  (+29 more)
src/bench/: CMakeLists.txt  bench_bitcoin.cpp  load_external.cpp  wallet_create_tx.cpp
src/common/: args.cpp  license_info.cpp  signmessage.cpp
src/consensus/: params.h  tx_verify.cpp  tx_verify.h
src/index/: coinstatsindex.cpp  coinstatsindex.h  namehash.cpp  namehash.h
src/interfaces/: wallet.h
src/ipc/test/: CMakeLists.txt
src/kernel/: CMakeLists.txt  bitcoinkernel.h  bitcoinkernel_wrapper.h  chainparams.cpp  chainparams.h  coinstats.cpp  coinstats.h  mempool_entry.h
src/logging/: categories.h
src/names/: applications.cpp  applications.h  common.cpp  common.h  encoding.cpp  main.cpp  main.h  unotrie.cpp  unotrie.h
src/node/: blockstorage.cpp  blockstorage.h  caches.cpp  caches.h  chainstate.cpp  chainstate.h  mempool_args.cpp  miner.cpp  miner.h  protocol_version.h  txorphanage.cpp
src/policy/: feerate.h  fees.h  policy.cpp  policy.h
src/primitives/: block.cpp  block.h  pureheader.cpp  pureheader.h  transaction.cpp  transaction.h
src/qt/: CMakeLists.txt  addressbookpage.cpp  askpassphrasedialog.cpp  bitcoin.cpp  bitcoin.qrc  bitcoinaddressvalidator.cpp  bitcoinaddressvalidator.h  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  buynamespage.cpp  buynamespage.h  coincontroldialog.cpp  configurenamedialog.cpp  configurenamedialog.h  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  macnotificationhandler.mm  managenamespage.cpp  managenamespage.h  nametablemodel.cpp  nametablemodel.h  rpcconsole.cpp  sendcoinsdialog.cpp  splashscreen.cpp  transactionrecord.cpp  transactionrecord.h  transactiontablemodel.cpp  transactionview.cpp  utilitydialog.cpp  walletframe.cpp  walletframe.h  walletmodel.cpp  walletmodel.h  walletview.cpp  walletview.h
src/rpc/: blockchain.cpp  blockchain.h  client.cpp  mining.cpp  misc.cpp  names.cpp  net.cpp  node.cpp  output_script.cpp  protocol.h  rawtransaction.cpp  rawtransaction_util.cpp  register.h  request.h  server.cpp  server.h  server_util.cpp  server_util.h  signmessage.cpp  util.cpp
src/script/: interpreter.cpp  interpreter.h  namecoinconsensus.cpp  script.cpp  script.h  sign.cpp  (+2 more)
(+233 files in other folders)
